--- a/src/pages/login/Login.css
+++ b/src/pages/login/Login.css
@@ -9,8 +9,11 @@
   background: linear-gradient(90deg, #5d54a4, #7c78b8);
   position: relative;
   height: 60vh;
-  width: 50vw;
+  width: 40vw;
   box-shadow: 0px 0px 24px #5c5696;
+  @media (width < 768px) {
+    width: 320px;
+  }
 }
 
 .screen__content {
@@ -144,7 +147,6 @@
 
 .social-login {
   position: absolute;
-  height: 140px;
   width: 160px;
   text-align: center;
   bottom: 0px;
@@ -171,4 +173,5 @@
 .googleIcon:hover,
 .githubIcon:hover {
   transform: scale(1.3);
+  color: #8e8caf;
 }
